--- a/themes/fumparfum/_dev/css/components/imageslider.scss
+++ b/themes/fumparfum/_dev/css/components/imageslider.scss
@@ -78,7 +78,10 @@
         align-items: center;
     }
      &.right {
-          right: 0;
+          right: 1em;
+      }
+      &.left {
+          left: 1em;
       }
   }
     button {
