added style for product page

--- a/themes/fumparfum/_dev/css/components/block-reassurance.scss
+++ b/themes/fumparfum/_dev/css/components/block-reassurance.scss
@@ -16,7 +16,7 @@ margin-bottom: 1em;
   }
   #product &{
     @include box-shadow;
-    background: white;
+    background: $gray;
     span{
       font-weight: 700;
     }
