--- a/themes/fumparfum/_dev/css/components/featuredproducts.scss
+++ b/themes/fumparfum/_dev/css/components/featuredproducts.scss
@@ -25,12 +25,15 @@
         text-decoration: none;
         text-align: center;
         font-weight: 400;
+        &:hover {
+            color: $gray-light;
+        }
     }
     .thumbnail-container {
         position: relative;
-        margin-bottom: 1.563rem;
+        margin-bottom: 3.5rem;
 //        height: 320px;
-        height: 350px;
+        height: 370px;
         background: $gray;
         //    @include box-shadow;
         &:hover,
@@ -41,7 +44,8 @@
                     opacity: 1;
                 }
                 &.no-variants {
-                    bottom: 4.2rem;
+//                    bottom: 4.2rem;
+                        bottom: 7.5rem;
                 }
             }
             .product-description::after {
@@ -64,6 +68,7 @@
         font-weight: 400;
         font-size: 30px;
         margin-bottom: 2.5em;
+        font-family: 'Roboto', sans-serif; 
         &:after,
         &:before {
             content: '';
@@ -123,7 +128,7 @@
         z-index: 1;
         background: $gray;
         width: 100%;
-        height: 100px;
+        height: 120px;
         bottom: 0;
     }
 
