--- a/themes/fumparfum/_dev/css/partials/_commons.scss
+++ b/themes/fumparfum/_dev/css/partials/_commons.scss
@@ -68,6 +68,14 @@ p {
 .h3 {
     text-transform: uppercase;
     color: white;
+    font-family: 'Roboto', sans-serif; 
+}
+h1,
+h2,
+h3,
+h4,
+h5, 
+h6 {font-family: 'Roboto', sans-serif; 
 }
 
 .h4 {
@@ -152,20 +160,21 @@ small.value {
 }
 
 .form-control {
-    background: $gray-light;
-    color: $gray;
-    border: $input-btn-border-width solid $input-border-color;
-    padding: 0.5rem 1rem;
+    background: $gray;
+    color: white;    
+    border: $input-btn-border-width solid $gray-light;
+    padding: 0.5rem 1.5rem;
+    font-size: .75rem;
     &:focus {
         background-color: white;
-        outline: 0.1875rem solid $brand-primary;
-        color: $gray-darker;
+        outline: 0.1rem solid $brand-primary;
+        color: $gray-light;
     }
 }
 
 .input-group {
     &.focus {
-        outline: 0.1875rem solid $brand-primary;
+        outline: 0.1rem solid $brand-primary;
     }
     .form-control:focus {
         outline: none;
@@ -192,16 +201,16 @@ small.value {
 input,
 textarea {
     &::-webkit-input-placeholder {
-        color: $gray;
+        color: white;
     }
     &::-moz-placeholder {
-        color: $gray;
+        color: white;
     }
     &:-ms-input-placeholder {
-        color: $gray;
+        color: white;
     }
     &:-moz-placeholder {
-        color: $gray;
+        color: white;
     }
     &:active {
         &::-webkit-input-placeholder {
@@ -223,8 +232,10 @@ textarea {
     height: 2.625rem;
     -moz-appearance: none;
     -webkit-appearance: none;
-    background: $gray-light url("data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAADAAAAAwCAQAAAD9CzEMAAAAPklEQVR4Ae3TwREAEBQD0V/6do4SXPZg7EsBhsQ8IEmSMOsiuEfg3gL3oXC7wK0bd1G4o8X9F4yIkyQfSrIByQBjp7QuND8AAAAASUVORK5CYII=") no-repeat scroll right 0.5rem center / 1.25rem 1.25rem;
+    background: $gray-light url('data:image/svg+xml;utf-8,<svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"><path fill="white" d="M7.41 8.59L12 13.17l4.59-4.58L18 10l-6 6-6-6 1.41-1.41z"/><path fill="none" d="M0 0h24v24H0V0z"/></svg>') no-repeat scroll right 0.5rem center / 1.25rem 1.25rem;
+//    background: $gray-light url("data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAADAAAAAwCAQAAAD9CzEMAAAAPklEQVR4Ae3TwREAEBQD0V/6do4SXPZg7EsBhsQ8IEmSMOsiuEfg3gL3oXC7wK0bd1G4o8X9F4yIkyQfSrIByQBjp7QuND8AAAAASUVORK5CYII=") no-repeat scroll right 0.5rem center / 1.25rem 1.25rem;
     padding: 0 0.5rem;
+
 }
 
 .form-control-valign {
