--- a/themes/fumparfum/_dev/css/components/block-reassurance.scss
+++ b/themes/fumparfum/_dev/css/components/block-reassurance.scss
@@ -14,11 +14,11 @@ margin-bottom: 1em;
   li .block-reassurance-item{
     padding: 1rem 1.5rem;
   }
-  #product &{
-    @include box-shadow;
-    background: $gray;
-    span{
-      font-weight: 700;
-    }
-  }
+//  #product &{
+//    @include box-shadow;
+//    background: $gray;
+//    span{
+//      font-weight: 700;
+//    }
+//  }
 }
