--- a/themes/fumparfum/_dev/css/components/footer.scss
+++ b/themes/fumparfum/_dev/css/components/footer.scss
@@ -1,6 +1,14 @@
 .reassurance {
     background-color: $gray;
 }
+.float-xs-right {
+    float: right;
+}
+.material-icons {
+    &.add {
+        color: $gray-light;
+    }
+}
 .block_newsletter {
   @include search-box;
   font-size: $font-size-sm;
@@ -30,6 +38,7 @@
 .block-contact {
   padding-left: 3rem;
   color: white;
+    font-size: .6875rem;
   .block-contact-title{
     color: white;
   }
@@ -53,7 +62,10 @@
 .myaccount-title a,
 .block-contact-title {
   font-weight: 700;
-  font-size: $base-font-size;
+  font-size: 0.875rem;
+    letter-spacing: 1.5px;
+    margin-bottom: 2rem;
+    font-family: 'Roboto', sans-serif;
 }
 .block-social {
   margin-top: 1rem;
@@ -85,6 +97,9 @@
     text-indent: 100%;
     overflow: hidden;
       border-bottom: none;
+      transform: scale(.9);
+//      -webkit-backface-visibility: hidden; 
+//    transform: translateZ(0);
     &:hover {
       color: transparent;
     }
@@ -102,7 +117,11 @@
         width: 55px;
         height: 55px;
     &:hover {
-        transform: scale(1.1);
+        transform: scale(1);
+                    transform: translateZ(0);
+    -webkit-perspective: 1000;
+    backface-visibility: hidden;
+    -webkit-font-smoothing: subpixel-antialiased;
     }
   }
 }
@@ -117,7 +136,11 @@
       width: 55px; 
       height: 55px;
     &:hover {
-        transform: scale(1.1);
+        transform: scale(1);
+            transform: translateZ(0);
+    -webkit-perspective: 1000;
+    backface-visibility: hidden;
+    -webkit-font-smoothing: subpixel-antialiased;
     }
   }
 }
@@ -138,7 +161,7 @@
       width: 55px; 
       height: 55px;
     &:hover {
-        transform: scale(1.1);
+        transform: scale(1);
     }
   }
 }
@@ -158,7 +181,7 @@
       width: 55px; 
       height: 55px;
     &:hover {
-        transform: scale(1.1);
+        transform: scale(1);
     }
   }
 }
@@ -177,9 +200,6 @@
   box-shadow: 2px 2px 11px 0px rgba(0, 0, 0, 0.3);
   li {
     margin-bottom: 0.3125rem;
-    border-bottom: 1px solid $gray-light;
-    list-style-image: url('data:image/svg+xml;utf-8,<svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"><path fill="#848484" d="M8.59 16.59L13.17 12 8.59 7.41 10 6l6 6-6 6-1.41-1.41z"/><path fill="none" d="M0 0h24v24H0V0z"/></svg>');
-    list-style-position: inside;
   }
   li a {
     color: $gray-light;
@@ -190,15 +210,65 @@
       color: white;
     }
   }
+    
 }
 .links {
+    .h3 {
+        font-size: 0.875rem;
+        text-transform: none;
+        letter-spacing: 1.5px;
+        margin-bottom: 2rem;
+        font-family: 'Roboto', sans-serif;
+    }
   .collapse {
     display: inherit;
   }
+    &:not(.block-contact) {
+        li {
+            a {
+                background: url('data:image/svg+xml;utf-8,<svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"><path fill="#848484" d="M8.59 16.59L13.17 12 8.59 7.41 10 6l6 6-6 6-1.41-1.41z"/><path fill="none" d="M0 0h24v24H0V0z"/></svg>');
+                background-repeat: no-repeat;
+                background-position-x: -.5rem;
+                background-size: 1.2rem;
+                background-position-y: center;                
+                display: block; 
+                padding: .75rem;
+            }
+            &:not(:last-child) {
+                border-bottom: 1px solid rgba(132,132,132,.5);
+            }
+        }
+        
+    }
+}
+.container-fluid {
+    &.copyright {
+        padding: 1rem 0;
+        > .row {
+            margin: 1rem;
+            border-top: 1px solid rgba(132,132,132,.5);
+            padding-top: 1rem;
+        }
+    }
 }
 
-
 @include media-breakpoint-down(sm) {
+    .container-fluid {
+        &.copyright {
+            padding-top: 0;
+            > .row {
+                margin: 0;
+                padding-left: 1rem;
+            }
+        }
+    }
+    #block-contact-footer {
+        padding-top: 1rem;
+        border-bottom: 1px solid #fff;
+        li {
+            border-bottom: none;
+        }
+    }
   .block_newsletter {
     padding-bottom: 0.625rem;
     border-bottom: 1px solid $gray-lighter;
@@ -206,6 +276,7 @@
   .footer-container {
     box-shadow: none;
     margin-top: 0;
+      padding-top: 0;
     .wrapper {
       padding-left: 0 !important;
       padding-right: 0 !important;
@@ -216,7 +287,7 @@
         font-size: 1rem;
       }
       ul {
-        background-color: $gray-lighter;
+        background-color: black;
         margin-bottom: 0;
           
 //           background: $gray-light url('data:image/svg+xml;utf-8,<svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"><path fill="white" d="M7.41 8.59L12 13.17l4.59-4.58L18 10l-6 6-6-6 1.41-1.41z"/><path fill="none" d="M0 0h24v24H0V0z"/></svg>') no-repeat scroll right 0.5rem center / 1.25rem 1.25rem;
@@ -225,7 +296,7 @@
           border-bottom: 1px solid white;
           font-weight: bold;
           a {
-            color: $gray-darker;
+            color: $gray-light;
           }
         }
       }
@@ -237,12 +308,18 @@
       &.in,
       &.show {
         display: block;
+          margin: 0 1rem;
+          transition: all .5s ease;
       }
     }
     .title {
-      padding: 0.625rem;
-      border-bottom: 1px solid $gray-lighter;
+      padding: 0.625rem;      
       cursor: pointer;
+        margin: 0 15px;
+        padding: .625rem 0;
+        &:not(:last-child) {
+            border-bottom: 1px solid $gray-lighter;
+        }
       .collapse-icons .remove {
         display: none;
       }
@@ -263,7 +340,7 @@
 }
 @include media-breakpoint-down(md) {
   .block-social {
-    text-align: center;
+    margin-bottom: 1rem;
   }
   .block-contact {
     padding-left: 1.5rem;
