--- a/themes/fumparfum/_dev/css/components/imageslider.scss
+++ b/themes/fumparfum/_dev/css/components/imageslider.scss
@@ -16,24 +16,30 @@
       @media (max-width: 767px) {
         max-width: 100%;
         height: auto;
+        object-fit: cover;
+        object-position: center;
+        min-height: 450px;
       }
       @media (min-width: 768px) {
-      width: 100%;
-      margin-left: 0;
-    }
+          width: 100%;
+          margin-left: 0;
+
+        }
     }
     .caption {
       position: absolute;
+        color: white;
+      max-width: 40%;
       @media (min-width: 768px) {
       bottom: 20%;
       left: 10%;
       }
       @media (max-width: 767px) {
         bottom: 5px;
-        left: 40px;
+        left: 65px;
+          max-width: 65%;
       }
-      color: white;
-      max-width: 40%;
+      .btn {margin-bottom: 1em;}
       .caption-description p {
         color: white;
       }
@@ -78,10 +84,16 @@
         align-items: center;
     }
      &.right {
-          right: 1em;
+          right: 1em; 
+         @media (max-width: 767px) {
+             right: .5em; 
+         }
       }
       &.left {
           left: 1em;
+          @media (max-width: 767px) {
+             left: .5em; 
+         }
       }
   }
     button {
